--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma testas</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/3rd-party/font-awesome.min.css">
     <link rel="apple-touch-icon" sizes="76x76" href="./favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
@@ -14,10 +15,67 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    labas
+    <header>
+        <div class="logo-box">
+            <a href="#"><img src="./img/logo.png" alt="logo" class="logo"></a>
+            <h1>Start</h1>
+        </div>
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+        <img src="./img/hamburger.png" alt="menu" class="hamburger">
+    </header>
+
+    <section class="hero">
+        <img src="./img/main-image.png" alt="main-image">
+        <div class="main-text">
+            <h3>Welcome</h3>
+            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nemo hic quos, ab, dolor aperiam nobis cum es: eos error ipsum, voluptate culpa nesciunt delectus iste?</p>
+        </div>
+        <a href="#" class="btn">Explore</a>
+    </section>
+
+    <section class="partners-content">
+        <div>
+            <h3>Partners</h3>
+            <p>Lorem Ipsum Dolor Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+        </div>
+
+
+        <div class="brands-container">
+            <img src="./img/google.png" alt="google">
+            <img src="./img/microsoft.png" alt="microsoft">
+            <img src="./img/airbnb.png" alt="airbnb">
+            <img src="./img/facebook.png" alt="facebook">
+            <img src="./img/spotify.png" alt="spotify">
+        </div>
+
+        <a href="Learn More"></a>
+    </section>
+    <footer>
+        <div class="socials">
+            <a href="#" target="_blank"><img src="./img/socials/facebook-icon.png" alt="ficon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/instagram-icon..png" alt="iicon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/twitter-icon..png" alt="ticon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/pinterest-icon.png" alt="picon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/tik-tok-icon.png" alt="tticon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/whatsapp-icon.png" alt="wicon"></a>
+            <a href="#" target="_blank"><img src="./img/socials/youtube-icon.png" alt="yicon"></a>
+        </div>
+        <span>&copy; Start, 2003. All rights reserved.</span>
+    </footer>
 </body>
 
 </html>
